hphp/test/slow/inout/bad-call-6.php.expectf

Fatal error: syntax error, unexpected T_OBJECT_OPERATOR, expecting ')' in %s/bad-call-6.php on line 3
